# SilverDict-desktop

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  crowdin.yml  manage.py
data/translations/: SilverDict_ar_SA.ts  SilverDict_de_DE.ts  SilverDict_el_GR.ts  SilverDict_en_GB.ts  SilverDict_en_US.ts  SilverDict_es_ES.ts  SilverDict_fr_FR.ts  SilverDict_he_IL.ts  SilverDict_hi_IN.ts  SilverDict_it_IT.ts  SilverDict_ja_JP.ts  SilverDict_ko_KR.ts  SilverDict_nl_NL.ts  SilverDict_pt_BR.ts  SilverDict_pt_PT.ts  SilverDict_ru_RU.ts  SilverDict_uk_UA.ts  SilverDict_zh_CN.ts  SilverDict_zh_TW.ts
src/: main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  runguard.cc  runguard.h
src/about/: aboutdialogue.cc  aboutdialogue.h  aboutdialogue.ui
src/edit/: adddictionarydialog.cc  adddictionarydialog.h  adddictionarydialog.ui  addgroupdialog.cc  addgroupdialog.h  addgroupdialog.ui  dictionarydialog.cc  dictionarydialog.h  dictionarydialog.ui  groupdialog.cc  groupdialog.h  groupdialog.ui  selectdictionarydialog.cc  selectdictionarydialog.h  selectdictionarydialog.ui  sourcedialog.cc  sourcedialog.h  sourcedialog.ui
src/preferences/: preferences.cc  preferences.h  preferencesdialogue.cc  preferencesdialogue.h  preferencesdialogue.ui
src/query/: articleview.cc  articleview.h  articleview.ui  querymodel.cc  querymodel.h  queryscreen.cc  queryscreen.h  queryscreen.ui  wordlistmodel.cc  wordlistmodel.h
src/remote/: models.cc  models.h  remoterepository.cc  remoterepository.h
